--- a/Form3.html
+++ b/Form3.html
@@ -12,9 +12,15 @@
         <div class="form-input">
             <label>Account</label>
             <ul>
-                <li><i class="bi bi-person-fill"></i><input type="text" placeholder="Full Name"></li>
-                <li><i class="bi bi-envelope"></i><input type="email" placeholder="Email Address"></li>
-                <li><i class="bi bi-key"></i><input type="password" placeholder="Password"></li>
+                <li><i class="bi bi-person-fill"></i><label>
+                    <input type="text" placeholder="Full Name">
+                </label></li>
+                <li><i class="bi bi-envelope"></i><label>
+                    <input type="email" placeholder="Email Address">
+                </label></li>
+                <li><i class="bi bi-key"></i><label>
+                    <input type="password" placeholder="Password">
+                </label></li>
             </ul>
 
         <div class="date_gender">
@@ -92,7 +98,6 @@
                 <input type="checkbox" value="ok">
             <label>I accept the  terms and conditions for signing up to service, and hereby confirm i have read the privacy policy.</label>
         </div>
-
     </form>
 </div>
 
