--- a/Form2.html
+++ b/Form2.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 <div id="login">
-    <form id="fomr-login">
+    <form id="form-login">
         <h1>Sign In</h1>
         <div class="input-box">
             <div class="input">
-            <input type="text" placeholder="username or email">
+                <label>
+                    <input type="text" placeholder="username or email">
+                </label>
             </div>
             <div class="input">
 
-            <input type="password" placeholder="password">
+                <label>
+                    <input type="password" placeholder="password">
+                </label>
             </div>
         </div>
         <div class="submit">
